# thrift_demo

./: pic_data.thrift  test_client.py
gen-cpp/: CMakeLists.txt  PicSim.cpp  PicSim.h  build.sh  imagelist.txt  pic_data_constants.cpp  pic_data_constants.h  pic_data_types.cpp  pic_data_types.h  server  server.cpp
gen-py/pic_data/: PicSim-remote  PicSim.py  __init__.py  test_client.py  ttypes.py
